# vehicle_tracker_cpp

./: CMakeLists.txt  Dockerfile  README.md  build.sh  run.sh
docs/: edge_cases.txt
src/: logger.cpp  main.cpp  object_detection.cpp  utils.cpp  vehicle_tracking.cpp  video_processing.cpp
src/headers/: logger.h  object_detection.h  utils.h  vehicle_tracking.h  vehicle_tracking_old.h  video_processing.h
